--- a/01_basics/01. Python 簡介.ipynb
+++ b/01_basics/01. Python 簡介.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "### [victorgau@gmail.com](\"mailto:victorgau@gmail.com?subject=[Question]QF20170311\")\n",
     "\n",
-    "### 2017-03-11\n",
+    "### 2017-09-21\n",
     "\n"
    ]
   },
@@ -141,6 +141,10 @@
     }
    },
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "## 初學者喜歡學 Python (PYPL, PopularitY of Programming Language Index)\n",
     "\n",
     "[![](../images/PYPL_2017_03.png)](http://pypl.github.io/PYPL.html)"
@@ -157,8 +161,8 @@
     }
    },
    "source": [
-    "## 電子電機工程師喜歡 Python (2016 IEEE Programming Languages Ranking)\n",
-    "[![](../images/2016 IEEE Top 10 Programming Languages.png)](http://spectrum.ieee.org/computing/software/the-2016-top-programming-languages)"
+    "## 電子電機工程師喜歡 Python (2017 IEEE Programming Languages Ranking)\n",
+    "[![](../images/MjkyNzIzNQ.jpeg)](https://spectrum.ieee.org/computing/software/the-2017-top-programming-languages)"
    ]
   },
   {
@@ -348,14 +352,15 @@
    "source": [
     "## 建議安裝 Python 3.x！！！\n",
     "\n",
-    "### (本課程使用 Python 3.5)"
+    "### (本課程使用 Python 3.6)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -369,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   },
   "livereveal": {
    "scroll": true
@@ -474,5 +479,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
