delete examples from 01_basics

--- a/01_basics/04. Python 的資料型態.ipynb
+++ b/01_basics/04. Python 的資料型態.ipynb
@@ -47,8 +47,7 @@
     "     - <font color=\"red\">布林 boolean (bool)</font>\n",
     "     - 複數 (complex)\n",
     "* 字串 string (str)\n",
-    "* None\n",
-    "* 日期時間 datetime"
+    "* None"
    ]
   },
   {
@@ -981,213 +980,6 @@
    "outputs": [],
    "source": [
     "hex(ord('中'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# datetime\n",
-    "#\n",
-    "# package: datetime\n",
-    "#   http://www.wklken.me/posts/2015/03/03/python-base-datetime.html\n",
-    "\n",
-    "# 取得當下的日期與時間\n",
-    "import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "now = datetime.datetime.now()\n",
-    "now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type(now)                             # datetime.datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "datetime.datetime.now().date()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type(datetime.datetime.now().date())  # datetime.date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "datetime.datetime.now().time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type(datetime.datetime.now().time())  # datetime.time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "datetime.date.today()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "type(datetime.date.today())   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### 日期 <-> 字串"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# 1. 字串 -> 日期\n",
-    "# 2. 日期 -> 字串\n",
-    "\n",
-    "# https://docs.python.org/3/library/datetime.html#strftime-strptime-behavior\n",
-    "\n",
-    "# strptime: p -> parse \n",
-    "s = '2017-03-11'\n",
-    "datetime.datetime.strptime(s, '%Y-%m-%d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# datetime 2 string: .strftime(Format): f -> format\n",
-    "date = datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "date = datetime.datetime.now().strftime(\"%Y%m%d\")\n",
-    "date"
    ]
   },
   {
