--- a/01_basics/01. Python 簡介.ipynb
+++ b/01_basics/01. Python 簡介.ipynb
@@ -43,7 +43,7 @@
     "## Python 之父\n",
     "### Guido Van Rossum (荷蘭, 1956~)\n",
     "\n",
-    "[![Guido Van Rossum (荷蘭, 1956~)](../images/Guido_van_Rossum_OSCON_2006_cropped.png)](https://en.wikipedia.org/wiki/Guido_van_Rossum)\n",
+    "[![Guido Van Rossum (荷蘭, 1956~)](images/Guido_van_Rossum_OSCON_2006_cropped.png)](https://en.wikipedia.org/wiki/Guido_van_Rossum)\n",
     "\n",
     "* 1989 年 Xmas 時，為了打發時間，Guido 開始寫 Python。\n",
     "* 1991 釋出 Python。\n",
@@ -82,7 +82,7 @@
    "source": [
     "### 從下面的笑話，可以稍微看出 Python 的特點！\n",
     "\n",
-    "![](../images/python-vs-java.jpg)"
+    "![](images/python-vs-java.jpg)"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "## 新創公司喜歡 Python！\n",
     "\n",
-    "[![](../images/AL_jobs.png)](https://www.codementor.io/learn-programming/beginner-programming-language-job-salary-community)"
+    "[![](images/AL_jobs.png)](https://www.codementor.io/learn-programming/beginner-programming-language-job-salary-community)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "## 學校喜歡教 Python (Top US Universities Teach Python)\n",
     "\n",
-    "[![](../images/Top39-700.4.png)](http://cacm.acm.org/blogs/blog-cacm/176450-python-is-now-the-most-popular-introductory-teaching-language-at-top-u-s-universities/fulltext)"
+    "[![](images/Top39-700.4.png)](http://cacm.acm.org/blogs/blog-cacm/176450-python-is-now-the-most-popular-introductory-teaching-language-at-top-u-s-universities/fulltext)"
    ]
   },
   {
@@ -141,13 +141,9 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "## 初學者喜歡學 Python (PYPL, PopularitY of Programming Language Index)\n",
     "\n",
-    "[![](../images/PYPL_2017_03.png)](http://pypl.github.io/PYPL.html)"
+    "[![](images/PYPL_2017_03.png)](http://pypl.github.io/PYPL.html)"
    ]
   },
   {
@@ -162,7 +158,7 @@
    },
    "source": [
     "## 電子電機工程師喜歡 Python (2017 IEEE Programming Languages Ranking)\n",
-    "[![](../images/MjkyNzIzNQ.jpeg)](https://spectrum.ieee.org/computing/software/the-2017-top-programming-languages)"
+    "[![](images/MjkyNzIzNQ.jpeg)](https://spectrum.ieee.org/computing/software/the-2017-top-programming-languages)"
    ]
   },
   {
@@ -173,7 +169,7 @@
     }
    },
    "source": [
-    "[![](../images/IoT_languages.png)](http://www.developer-tech.com/news/2016/apr/20/research-iot-developer-survey-reveals-popular-technologies/)"
+    "[![](images/IoT_languages.png)](http://www.developer-tech.com/news/2016/apr/20/research-iot-developer-survey-reveals-popular-technologies/)"
    ]
   },
   {
@@ -186,7 +182,7 @@
    "source": [
     "## 資料科學家喜歡 Python (Top 10 Tools for Analytics/Data Science)\n",
     "\n",
-    "[![](../images/top10-analytics-data-science-software-2016.jpg)](http://www.kdnuggets.com/2016/06/r-python-top-analytics-data-mining-data-science-software.html)"
+    "[![](images/top10-analytics-data-science-software-2016.jpg)](http://www.kdnuggets.com/2016/06/r-python-top-analytics-data-mining-data-science-software.html)"
    ]
   },
   {
@@ -199,7 +195,7 @@
    "source": [
     "## 社群喜歡 Python (TIOBE Programming Community Index)\n",
     "\n",
-    "[![](../images/Tiobe_2017_02.png)](http://www.tiobe.com/tiobe-index/)"
+    "[![](images/Tiobe_2017_02.png)](http://www.tiobe.com/tiobe-index/)"
    ]
   },
   {
@@ -212,11 +208,11 @@
    "source": [
     "## 後端喜歡 Python (Python/Django Market Share)\n",
     "\n",
-    "[![](../images/silicon_valley.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)\n",
+    "[![](images/silicon_valley.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)\n",
     "\n",
-    "[![](../images/berlin.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)\n",
+    "[![](images/berlin.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)\n",
     "\n",
-    "[![](../images/barcelona.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)"
+    "[![](images/barcelona.png)](https://www.quora.com/How-is-the-market-for-programmers-in-Python-Django)"
    ]
   },
   {
@@ -227,7 +223,7 @@
     }
    },
    "source": [
-    "[![](../images/backend.png)](https://en.wikipedia.org/wiki/Programming_languages_used_in_most_popular_websites)"
+    "[![](images/backend.png)](https://en.wikipedia.org/wiki/Programming_languages_used_in_most_popular_websites)"
    ]
   },
   {
@@ -239,7 +235,7 @@
    },
    "source": [
     "## Fintech 喜歡 Python\n",
-    "[![](../images/fintech-finance-1.png)](https://blog.hackerrank.com/emerging-languages-still-overshadowed-by-incumbents-java-python-in-coding-interviews/)"
+    "[![](images/fintech-finance-1.png)](https://blog.hackerrank.com/emerging-languages-still-overshadowed-by-incumbents-java-python-in-coding-interviews/)"
    ]
   },
   {
@@ -254,7 +250,7 @@
    },
    "source": [
     "## 2015 Github Statistics\n",
-    "[![](../images/Python vs R in Github.png)](http://githut.info/?utm_content=buffer781de&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer)\n",
+    "[![](images/Python vs R in Github.png)](http://githut.info/?utm_content=buffer781de&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer)\n",
     "\n",
     "[Python vs. R (Datacamp)](https://www.datacamp.com/community/tutorials/r-or-python-for-data-analysis)"
    ]
@@ -271,7 +267,7 @@
    },
    "source": [
     "## stackoverflow\n",
-    "[![](../images/2016 stackoverflow Languages Ranking.png)](http://stackoverflow.com/research/developer-survey-2016#technology-most-popular-technologies)"
+    "[![](images/2016 stackoverflow Languages Ranking.png)](http://stackoverflow.com/research/developer-survey-2016#technology-most-popular-technologies)"
    ]
   },
   {
@@ -339,7 +335,7 @@
     }
    },
    "source": [
-    "[![](../images/py3readiness.png)](http://py3readiness.org/)"
+    "[![](images/py3readiness.png)](http://py3readiness.org/)"
    ]
   },
   {
