--- a/01_basics/07. Python 的流程控制.ipynb
+++ b/01_basics/07. Python 的流程控制.ipynb
@@ -17,8 +17,7 @@
     "\n",
     "### [victorgau@gmail.com](\"mailto:victorgau@gmail.com?subject=[Question]QF20170311\")\n",
     "\n",
-    "### 2017-03-11\n",
-    "\n"
+    "### 2017-11-27"
    ]
   },
   {
@@ -40,7 +39,7 @@
     }
    },
    "source": [
-    "### 重點：\n",
+    "## 學習重點：\n",
     "\n",
     "* if 語句\n",
     "  - if\n",
@@ -48,14 +47,22 @@
     "  - if-elif-else\n",
     "* 迴圈\n",
     "  - for loop\n",
-    "  - while loop\n",
-    "  - continue, break,..."
+    "  - break 跟 continue\n",
+    "  - while loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if 條件式"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -73,6 +80,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -94,6 +102,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -114,9 +123,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## for 迴圈\n",
+    "\n",
+    "### 語法：\n",
+    "\n",
+    "```python\n",
+    "for 變數 in 資料結構:\n",
+    "    欲執行之程式區塊\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -135,6 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -148,6 +173,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -163,9 +189,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## break 跟 continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    if i % 5 == 0:\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 10):\n",
+    "    if i % 5 ==0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## while 迴圈\n",
+    "\n",
+    "### 語法：\n",
+    "\n",
+    "```python\n",
+    "while 條件式:\n",
+    "    欲執行之程式區塊\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -184,6 +266,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -204,6 +287,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -224,6 +308,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -242,7 +327,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
