--- a/01_basics/08. Python 的函式.ipynb
+++ b/01_basics/08. Python 的函式.ipynb
@@ -17,8 +17,7 @@
     "\n",
     "### [victorgau@gmail.com](\"mailto:victorgau@gmail.com?subject=[Question]QF20170311\")\n",
     "\n",
-    "### 2017-03-11\n",
-    "\n"
+    "### 2017-11-27"
    ]
   },
   {
@@ -40,10 +39,10 @@
     }
    },
    "source": [
-    "## 函式 (Functions)\n",
+    "## 學習重點\n",
     "\n",
     "* 使用 def 定義函式\n",
-    "* pass\n",
+    "* 用 pass 來表示空函式\n",
     "* lambda function (匿名函式)\n",
     "* 位置引數 (positional arguments)\n",
     "* 關鍵字引數 (keyword arguments)\n",
@@ -54,7 +53,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -91,7 +89,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -118,7 +115,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -139,7 +135,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -159,7 +154,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -174,14 +168,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "# Positional Parameters\n",
+    "# Positional Arguments\n",
     "def f(a, b, c):\n",
     "    return {'a':a, 'b':b, 'c':c}\n",
     "\n",
@@ -192,14 +185,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "# Keyword Parameters\n",
+    "# Keyword Arguments\n",
     "def f(a, b, c):\n",
     "    return {'a':a, 'b':b, 'c':c}\n",
     "\n",
@@ -210,7 +202,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -224,7 +215,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -242,7 +232,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -259,7 +248,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -277,7 +265,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -299,7 +286,37 @@
    },
    "outputs": [],
    "source": [
-    "# default arguments?"
+    "# default arguments\n",
+    "def f(a, b=2, c=3):\n",
+    "    return {'a':a, 'b':b, 'c':c}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(a, b=2, c):\n",
+    "    return {'a':a, 'b':b, 'c':c}"
    ]
   },
   {
@@ -318,7 +335,7 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   },
   "livereveal": {
    "scroll": true
@@ -437,5 +454,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
